# tile-schemas

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: workflow.yml
docs/: tile-deployment.schema.json  tile-request-param-value.schema.json
docs/schemas/v1.0/: tile-config.schema.json  tile-deployment.schema.json  tile-request-param-value.schema.json  tile-request.schema.json
java/: build.gradle.kts
python/: build.gradle.kts
python/wheel-template/: pyproject.toml
tar/: build.gradle.kts
